--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
+    "styled-components": "^6.3.8",
     "tailwind-merge": "^3.3.0",
     "ua-parser-js": "^2.0.3"
   },
