--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
-    "next": "15.3.6",
+    "next": "^16.1.4",
     "next-sanity": "^9.12.0",
     "nodemailer": "^7.0.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "styled-components": "^6.3.8",
@@ -41,7 +41,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "^16.1.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
